fix of horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ body {
   font-size: 1rem;
   padding: 0 20px;
 }
-@media (max-width: 1110px) {
+@media (max-width: 1127px) {
   .work {
     padding: 75px 0;
   }
